@@ -1446,6 +1446,29 @@ get_matching (CamelFolder *folder, guint32 flags, guint32 mask, char **set)
 static void
 imap_sync_offline (CamelFolder *folder, CamelException *ex)
 {
+	if (folder->summary && (folder->summary->flags & CAMEL_SUMMARY_DIRTY) != 0) {
+		CamelStoreInfo *si;
+
+		/* Update also summary count info in folder's summary...  */
+		camel_object_get (folder, NULL,
+					CAMEL_FOLDER_UNREAD, &folder->summary->unread_count,
+					CAMEL_FOLDER_TOTAL, &folder->summary->saved_count,
+					CAMEL_FOLDER_DELETED, &folder->summary->deleted_count,
+					NULL);
+
+		/* ... and store's summary when folder's summary is dirty */
+		si = camel_store_summary_path ((CamelStoreSummary *)((CamelImapStore *)folder->parent_store)->summary, folder->full_name);
+		if (si) {
+			if (si->total != folder->summary->saved_count || si->unread != folder->summary->unread_count) {
+				si->total = folder->summary->saved_count;
+				si->unread = folder->summary->unread_count;
+				camel_store_summary_touch ((CamelStoreSummary *)((CamelImapStore *)folder->parent_store)->summary);
+			}
+
+			camel_store_summary_info_free ((CamelStoreSummary *)((CamelImapStore *)folder->parent_store)->summary, si);
+		}
+	}
+
 	camel_folder_summary_save (folder->summary, ex);
 	camel_store_summary_save((CamelStoreSummary *)((CamelImapStore *)folder->parent_store)->summary, ex);
 }
