@@ -1,3 +1,7 @@
+2008-04-03  Philip Van Hoof <pvanhoof@gnome.org>
+
+	* Merged patch for upstream camel-lite bug #257361
+
 2008-04-02  Jose Dapena Paz  <jdapena@igalia.com>
 
 	* Respect better the attachment flag headers also in POP (equivalent
